# OpenFOAM_airfoil

./: .flake8  404.html  Dockerfile  README.md  index.html  mkdocs.yml  objects.inv  openfoam_airfoil.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  openfoam_airfoil.md
examples/naca0012_study/: aoa_0.json  aoa_10.json  aoa_15.json  aoa_5.json  nasa_landson_experiment.csv
examples/naca4415_study/: aoa_0.json  aoa_10.json  aoa_15.json  aoa_2_5.json  aoa_5.json  aoa_7_5.json  aoa_m3.json
examples/uiuc_b737/: aoa_0.json
input/: initial_settings.json
notebooks/: airfoils.ipynb  draft.ipynb  examples.ipynb
openfoam_airfoil/: index.html
search/: search_index.json
src/: main.py
src/airfoil/: __init__.py  airfoil copy.py  airfoil.py  airfoil_base.py
src/postprocess/: __init__.py  aggregate_summaries.py  generate_plots.py  generate_summary.py  visualizations.py
src/postprocess/plotting/: __init__.py  generate_polar_plots.py  generate_single_case_plots.py  matplotlib_plots.py  pyvista_plots.py
src/settings/: __init__.py  initial_settings.py
src/simulation/: __init__.py
src/simulation/openfoam/: block_mesh.py  boundary_condition.py  cf_mesh_2d.py  constant_dir.py  mesh.py  snappy_hex_mesh.py  system_dir.py
src/simulation/preparation/: __init__.py  case_structure.py  prepare_case.py
src/simulation/run/: __init__.py  run_case.sh  run_meshing.sh  run_multiple_cases.sh  run_postprocess.sh  run_simulation.sh  run_simultion.sh
src/templates/: __init__.py  airfoil_template.py  boundary_condition_template.py  initial_settings_template.py  plot_config.py
src/templates/boundary_conditions/: boundary_files.py
src/templates/openfoam_template_files/: __init__.py  block_mesh_files.py  boundary_files.py  cf_mesh_files.py  constant_files.py  snappy_hex_mesh_file.py  snappy_mex_mesh_file.py  system_files.py
src/templates/python_template_files/: __init__.py  airfoil_template.py  boundary_condition_template.py  initial_settings_template.py  plot_config.py
src/utils/: __init__.py  geometry.py  logger.py  physics.py  utilities.py
