[project]
name = "openfoam-airfoil"
version = "0.1.0"
description = ""
authors = [
    {name = "Arek Drabik",email = "arek.drabik1453@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [{ include = "airfoil", from = "src" }, { include = "simulation", from = "src" }, { include = "postprocess", from = "src" }]
