
[tool.poetry]
name = "openfoam-airfoil"
version = "0.1.0"
description = ""
authors = [
    "Arek Drabik <arek.drabik1453@gmail.com>"
]
readme = "README.md"
packages = [
    { include = "airfoil", from = "src" },
    { include = "simulation", from = "src" },
    { include = "postprocess", from = "src" },
    { include = "settings", from = "src" },
    { include = "utils", from = "src" },
    { include = "templates", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11"
airfoils = ">=0.2.2,<0.3.0"

numpy = ">=2.3.5,<3.0.0"
matplotlib = ">=3.10.7,<4.0.0"
scipy = ">=1.16.3,<2.0.0"
requests = "^2.32.5"
numpy-stl = "^3.2.0"
pyvista = "^0.46.4"
trame = "^3.12.0"
trame-vtk = "^2.10.1"
trame-vuetify = "^3.2.0"
pandas = "^2.3.3"
jinja2 = "^3.1.6"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.1"
mkdocstrings = {extras = ["python"], version = "^1.0.0"}
mkdocs-git-revision-date-localized-plugin = "^1.5.0"
pymdown-extensions = "^10.20"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"
flake8 = "^7.3.0"

